opam-version: "2.0"
name: "opentracing"
version: "0.1"
synopsis: "One-line description"
description: """
Longer description
"""
maintainer: "Name <email>"
authors: "Name <email>"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [
  "jbuilder" {build}
  "opentracing"
  "lwt"
  "cohttp"
  "cohttp-lwt-unix"
]
build: [["jbuilder" "build" "-p" name "-j" jobs]]
