opam-version: "2.0"
name: "opentracing-opium"
version: "0.1"
synopsis: "One-line description"
description: """
Longer description
"""
maintainer: "Name <email>"
authors: "Name <email>"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [
  "jbuilder" {build}
  "opentracing"
  "opentracing-lwt"
  "lwt"
  "opium"
]
build: [["jbuilder" "build" "-p" name "-j" jobs]]
